Add function app

--- a/src/Demo.BlazorApp/_Imports.razor
+++ b/src/Demo.BlazorApp/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Blazor.WebAssemblyApp
-@using Blazor.WebAssemblyApp.Shared
+@using Demo.BlazorApp
+@using Demo.BlazorApp.Shared
