Add AJAX call to Blazor app

--- a/src/Demo.BlazorApp/Pages/Counter.razor
+++ b/src/Demo.BlazorApp/Pages/Counter.razor
@@ -1,4 +1,6 @@
 ﻿@page "/counter"
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Config
 @inject IJSRuntime Jsr
 
 <h1>Counter</h1>
@@ -9,6 +11,8 @@
 
 <div id="reactUICounter"></div>
 
+<div id="reactHello"></div>
+
 @code {
     private int currentCount = 0;
 
@@ -16,6 +20,12 @@
     {
         currentCount++;
 
+        var baseUri = Config.GetValue<string>("FUNCTIONAPP_BASE_URI");
+        var endpoint = Config.GetValue<string>("FUNCTIONAPP_ENDPOINT");
+        var authKey = Config.GetValue<string>("FUNCTIONAPP_AUTH_KEY");
+        var requestUri = $"{baseUri.TrimEnd('/')}/{endpoint.TrimStart('/')}?count={currentCount}&code={authKey}";
+
         await Jsr.InvokeVoidAsync("FluentUIComponents.RenderUICounter", currentCount);
+        await Jsr.InvokeVoidAsync("FluentUIComponents.GetHello", requestUri);
     }
 }
